Maked the custom bootstrap component inhereit from BlazorBootstrapComponentBase. An used them in Sign in and password change. Improved their directory and added some more components to provide bootstrap validation for edit forms.

--- a/SchulCloud.Server/Components/Bootstrap/Forms/FloatingPasswordInput.razor
+++ b/SchulCloud.Server/Components/Bootstrap/Forms/FloatingPasswordInput.razor
@@ -1,28 +1,28 @@
 ﻿@inherits FloatingTextInput
 
-<div class="input-group has-validation @OuterClass.Trim()">
-    <div class="form-floating@(GetValidationClass())">
+<InputGroup Class="@ClassNames" Style="@StyleNames">
+    <div class="@($"{ExtendedBootstrapClass.FormFloating} {FieldCssClass}".Trim())">
         @{
             string inputType = IsPasswordVisible ? "text" : "password";
         }
-        <input type="@inputType" class="form-control rounded-end-0@(GetValidationClass()) @Class.Trim()" id="@Id" @bind="Value" placeholder="@Placeholder" @attributes="AdditionalAttributes" />
+        <input type="@inputType" class="@($"{BootstrapClass.FormControl} rounded-end-0 {FieldCssClass}")" id="@Id" value="@Value" @onchange="OnChangeAsync" @attributes="AdditionalAttributes" />
         <label for="@Id">@FloatingLabel</label>
     </div>
 
-    <span class="input-group-text p-0">
+    <InputGroupText Class="p-0">
         <Button Class="d-flex align-items-center" @onclick="ChangePasswordVisibility_Click">
             @{
                 string iconName = IsPasswordVisible ? "visibility" : "visibility_off";
             }
             <FontsIcon Name="@iconName" />
         </Button>
-    </span>
+    </InputGroupText>
 
-    @if (UseEditForm)
+    @if (ShowValidationFeedback)
     {
-        <EditFormValidationFeedback For="@For" />
+        <BsValidationFeedback Identifier="_fieldIdentifier" />
     }
-</div>
+</InputGroup>
 
 @code {
     /// <summary>
@@ -31,8 +31,15 @@
     [Parameter]
     public bool IsPasswordVisible { get; set; }
 
+    protected override string ClassNames => Class ?? string.Empty;
+
     private void ChangePasswordVisibility_Click()
     {
+        if (Disabled)
+        {
+            return;
+        }
+
         IsPasswordVisible = !IsPasswordVisible;
     }
 }
