--- a/SchulCloud.Server/Components/Modals/PasswordChangeModal.razor
+++ b/SchulCloud.Server/Components/Modals/PasswordChangeModal.razor
@@ -17,14 +17,16 @@
 <Modal @ref="Modal" Title="@Localizer["modalTitle"]" HeaderCssClass="bg-body text-light-emphasis" ShowCloseButton="false" UseStaticBackdrop>
     <BodyTemplate>
         <EditForm EditContext="_editContext">
+            <BsFieldCssProvider />
+
             <EditFormValidator For="() => Model.CurrentPassword" ValidateAsync="ValidateCurrentPasswordAsync" />
-            <FloatingPasswordInput OuterClass="mb-3" @bind-Value="Model.CurrentPassword" For="() => Model.CurrentPassword" FloatingLabel="@Localizer["currentPassword_Placeholder"]" Placeholder="password" autocomplete="current-password" required />
+            <FloatingPasswordInput Class="mb-3" @bind-Value="Model.CurrentPassword" FloatingLabel="@Localizer["currentPassword_Placeholder"]" Placeholder="password" autocomplete="current-password" required />
 
             <EditFormValidator For="() => Model.NewPassword" ValidateAsync="ValidateNewPasswordAsync" />
-            <FloatingPasswordInput OuterClass="mb-3" @bind-Value="Model.NewPassword" For="() => Model.NewPassword" FloatingLabel="@Localizer["newPassword_Placeholder"]" Placeholder="newPassword" autocomplete="new-password" required />
+            <FloatingPasswordInput Class="mb-3" @bind-Value="Model.NewPassword" FloatingLabel="@Localizer["newPassword_Placeholder"]" Placeholder="newPassword" autocomplete="new-password" required />
 
             <EditFormValidator For="() => Model.ConfirmedPassword" ValidateAsync="ValidateConfirmedPasswordAsync" />
-            <FloatingPasswordInput @bind-Value="Model.ConfirmedPassword" For="() => Model.ConfirmedPassword" FloatingLabel="@Localizer["confirmedPassword_Placeholder"]" Placeholder="newPassword" autocomplete="confirmed-password" required />
+            <FloatingPasswordInput @bind-Value="Model.ConfirmedPassword" FloatingLabel="@Localizer["confirmedPassword_Placeholder"]" Placeholder="newPassword" autocomplete="off" required />
         </EditForm>
     </BodyTemplate>
     <FooterTemplate>
@@ -56,17 +58,17 @@
         _user = (await UserManager.GetUserAsync(state.User).ConfigureAwait(false))!;
     }
 
-    private async Task<IEnumerable<string>> ValidateCurrentPasswordAsync()
+    private async Task<IEnumerable<string>> ValidateCurrentPasswordAsync(EditContext context, FieldIdentifier identifier)
     {
         if (!await UserManager.CheckPasswordAsync(_user, Model.CurrentPassword).ConfigureAwait(false))
         {
-            return [ErrorDescriber.PasswordMismatch().Description];
+            return [ ErrorDescriber.PasswordMismatch().Description ];
         }
 
         return [];
     }
 
-    private async Task<IEnumerable<string>> ValidateNewPasswordAsync()
+    private async Task<IEnumerable<string>> ValidateNewPasswordAsync(EditContext context, FieldIdentifier identifier)
     {
         IdentityResult result = await PasswordValidator.ValidateAsync(UserManager, _user, Model.NewPassword).ConfigureAwait(false);
         if (!result.Succeeded)
@@ -77,7 +79,7 @@
         return [];
     }
 
-    private Task<IEnumerable<string>> ValidateConfirmedPasswordAsync()
+    private Task<IEnumerable<string>> ValidateConfirmedPasswordAsync(EditContext context, FieldIdentifier identifier)
     {
         if (!Model.NewPassword.Equals(Model.ConfirmedPassword))
         {
