--- a/SchulCloud.Server/Components/App.razor
+++ b/SchulCloud.Server/Components/App.razor
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <HeadOutlet @rendermode="InteractiveServer" />
-    <script src="/static/js/main.min.js"></script>
+    <script src="/static/js/bundle.min.js"></script>
 </head>
 
 <body class="h-100">
