Separated .razor files in .razor and .razor.cs files and optionally a .razor.css file. Enabled css isolation and adjust the paths of the scoped css bundles.

--- a/SchulCloud.Server/Components/Bootstrap/Validation/BsValidationFeedback.razor
+++ b/SchulCloud.Server/Components/Bootstrap/Validation/BsValidationFeedback.razor
@@ -1,43 +1,6 @@
-﻿@using System.Linq.Expressions
-
-@foreach (string message in EditContext.GetValidationMessages(Identifier!.Value))
+﻿@foreach (string message in EditContext.GetValidationMessages(Identifier!.Value))
 {
     <div class="@ExtendedBootstrapClass.InvalidFeedback">
         @message
     </div>
-}
-
-@code {
-    [CascadingParameter]
-    private EditContext EditContext { get; set; } = default!;
-
-    /// <summary>
-    /// An expression that specified the field for that this component displays messages for.
-    /// </summary>
-    [Parameter]
-    public Expression<Func<object>> For { get; set; } = default!;
-
-    /// <summary>
-    /// The identifier of the field this component displays messages for.
-    /// </summary>
-    [Parameter]
-    public FieldIdentifier? Identifier { get; set; }
-
-    protected override void OnParametersSet()
-    {
-        if (For is null && Identifier is null)
-        {
-            throw new InvalidOperationException($"{nameof(For)} or {nameof(Identifier)} have to be provided.");
-        }
-        else if (For is not null)
-        {
-            Identifier = FieldIdentifier.Create(For!);
-        }
-
-        if (EditContext is null)
-        {
-            throw new InvalidOperationException($"{nameof(BsValidationFeedback)} have to be placed inside of an {nameof(EditContext)}.");
-        }
-
-    }
 }
