--- a/SchulCloud.Server/Components/Layouts/AnonLayout.razor
+++ b/SchulCloud.Server/Components/Layouts/AnonLayout.razor
@@ -1,28 +1,7 @@
-﻿@using Blazored.LocalStorage
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Sections
-@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
-@using Microsoft.AspNetCore.Localization
-@using Microsoft.Extensions.Localization
-@using Microsoft.Extensions.Options
+﻿@using System.Globalization
 @using SchulCloud.Server.Enums
-@using SchulCloud.Server.Options
-@using System.Globalization;
-@using SchulCloud.Server.Utils.Interfaces
-@using System.Collections.Immutable
 
 @inherits LayoutComponentBase
-
-@attribute [AllowAnonymous]
-
-@inject IStringLocalizer<AnonLayout> Localizer
-@inject ILocalStorageService BrowserStorage
-@inject IHttpContextAccessor HttpContextAccessor
-@inject IJSRuntime JSRuntime
-@inject IOptions<SchulCloud.Server.Options.LocalizationOptions> LocalizationOptionsAccessor
-@inject IOptionsSnapshot<PresentationOptions> PresentationOptionsAccessor
-@inject ICookieHelper CookieHelper
-@inject NavigationManager NavigationManager
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -130,107 +109,3 @@
 <main class="h-auto">
     @Body
 </main>
-
-@code {
-    private CultureInfo? _activeCulture;
-
-    private ColorTheme _activeColorTheme;
-
-    private bool _autoModeAvailable = true;
-
-    private const string ThemeKey = ".AspNetCore.Theme";
-
-    protected override void OnInitialized()
-    {
-        string? cultureCookieValue = HttpContextAccessor.HttpContext?.Request.Cookies[CookieRequestCultureProvider.DefaultCookieName];
-        if (!string.IsNullOrEmpty(cultureCookieValue))
-        {
-            _activeCulture = Thread.CurrentThread.CurrentUICulture;
-        }
-
-        base.OnInitialized();
-    }
-
-    protected override async Task OnAfterRenderAsync(bool firstRender)
-    {
-        if (firstRender)
-        {
-            _autoModeAvailable = await JSRuntime.InvokeAsync<bool>("autoColorThemeAvailable");
-
-            ColorTheme theme = await BrowserStorage.GetItemAsync<ColorTheme>(ThemeKey);
-            if (theme == ColorTheme.Auto && !_autoModeAvailable)
-            {
-                _activeColorTheme = ColorTheme.Light;
-            }
-            else
-            {
-                _activeColorTheme = theme;
-            }
-        }
-
-        await base.OnAfterRenderAsync(firstRender);
-    }
-
-    private async Task CultureChange_ClickAsync(CultureInfo? culture)
-    {
-        if (_activeCulture?.Name == culture?.Name)
-        {
-            return;
-        }
-
-        if (culture is not null)
-        {
-            CookieOptions options = new() { MaxAge = TimeSpan.FromDays(400) };
-
-            string cookieValue = CookieRequestCultureProvider.MakeCookieValue(new(culture));
-            await CookieHelper.SetCookieAsync(CookieRequestCultureProvider.DefaultCookieName, cookieValue, options);
-        }
-        else
-        {
-            await CookieHelper.RemoveCookieAsync(CookieRequestCultureProvider.DefaultCookieName);
-        }
-
-        _activeCulture = culture;
-
-        NavigationManager.Refresh(forceReload: true);
-    }
-
-    private async Task ColorThemeChange_ClickAsync(ColorTheme theme)
-    {
-        if (_activeColorTheme == theme)
-        {
-            return;
-        }
-
-        if (theme == ColorTheme.Auto)
-        {
-            await BrowserStorage.RemoveItemAsync(ThemeKey);
-        }
-        else
-        {
-            await BrowserStorage.SetItemAsync(ThemeKey, theme);
-        }
-
-        await DisplayColorThemeAsync(theme);
-    }
-
-    private async ValueTask DisplayColorThemeAsync(ColorTheme theme)
-    {
-        if (!_autoModeAvailable && theme == ColorTheme.Auto)
-        {
-            theme = ColorTheme.Light;
-        }
-
-        _activeColorTheme = theme;
-        await JSRuntime.InvokeVoidAsync("setTheme", theme.ToString().ToLower());
-    }
-
-    private string IsActiveElement(object? element, object? otherElement)
-    {
-        if (element?.Equals(otherElement) ?? otherElement is null)
-        {
-            return " active";
-        }
-        return string.Empty;
-    }
-}
