--- a/SchulCloud.Server/Components/App.razor
+++ b/SchulCloud.Server/Components/App.razor
@@ -11,6 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <link rel="stylesheet" href="/static/css/SchulCloud.Server.bundle.scp.css" />
+    <link rel="stylesheet" href="/static/_content/Blazor.Bootstrap/Blazor.Bootstrap.bundle.scp.css" />
+
     <HeadOutlet @rendermode="InteractiveServer" />
     <script src="/static/js/bundle.min.js"></script>
 </head>
