--- a/SchulCloud.Server/Components/Bootstrap/Forms/InputGroup.razor
+++ b/SchulCloud.Server/Components/Bootstrap/Forms/InputGroup.razor
@@ -1,23 +1,5 @@
-﻿@using System.Linq.Expressions
-@using System.Collections.ObjectModel
-@using System.Collections.Specialized
-
-@inherits BlazorBootstrapComponentBase
+﻿@inherits BlazorBootstrapComponentBase
 
 <div class="@ClassNames" id="@Id" style="@StyleNames" @attributes="@AdditionalAttributes">
     @ChildContent
 </div>
-
-@code {
-    [Parameter]
-    public required RenderFragment ChildContent { get; set; }
-
-    [CascadingParameter]
-    private EditContext? EditContext { get; set; }
-
-    protected override string ClassNames =>
-        BuildClassNames(
-            Class,
-            (ExtendedBootstrapClass.InputGroup, true),
-            (ExtendedBootstrapClass.HasValidation, EditContext is not null));
-}
