--- a/SchulCloud.Server/Components/Pages/Account/Settings.razor
+++ b/SchulCloud.Server/Components/Pages/Account/Settings.razor
@@ -1,15 +1,1 @@
-﻿@using Microsoft.AspNetCore.Authorization
-@using Microsoft.Extensions.Localization;
-
-@page "/account/settings"
-@rendermode InteractiveServer
-
-@attribute [Authorize]
-
-@inject IStringLocalizer<Settings> Localizer
-
-<SchulCloudPageTitle Title="@Localizer["title"]" />
-
-@code {
-
-}
+﻿<SchulCloudPageTitle Title="@Localizer["title"]" />
