Added a support for email senders with a first implementation for development purpose. Removed some unneeded semicolons and an empty line.

--- a/SchulCloud.Server/Components/_Imports.razor
+++ b/SchulCloud.Server/Components/_Imports.razor
@@ -9,6 +9,6 @@
 @using SchulCloud.Server
 @using SchulCloud.Client
 @using SchulCloud.Server.Components
-@using SchulCloud.Server.Components.Bootstrap.Forms;
-@using SchulCloud.Server.Components.Bootstrap.Validation;
-@using BlazorBootstrap;
+@using SchulCloud.Server.Components.Bootstrap.Forms
+@using SchulCloud.Server.Components.Bootstrap.Validation
+@using BlazorBootstrap
