Fix: Rerender EditForm components on ValidationStateChanged because without the evaluation whether valid or not happens before the validation happens.

--- a/SchulCloud.Server/Components/Bootstrap/Validation/BsValidationFeedback.razor
+++ b/SchulCloud.Server/Components/Bootstrap/Validation/BsValidationFeedback.razor
@@ -1,4 +1,6 @@
-﻿@foreach (string message in EditContext.GetValidationMessages(Identifier!.Value))
+﻿@implements IDisposable
+
+@foreach (string message in EditContext.GetValidationMessages(Identifier!.Value))
 {
     <div class="@ExtendedBootstrapClass.InvalidFeedback">
         @message
